--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -1,9 +1,76 @@
-<h1><%= @bar.name %></h1>
-<p>
-  <%= @bar.address %>
-</p>
-<br>
-<% @leaderboard.first(3).each do |key, value| %>
-  <% user = User.find_by(name: key) %>
-  <%= link_to key, user_path(user) %>: <%= value %><br>
-<% end %>
+<style>
+body {
+  background: black;
+}
+
+.background {
+  position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('http://www.thompsonhotels.com/content/uploads/2014/11/LP_Bar-1200x667.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+    opacity: 0.4;
+    filter:alpha(opacity=40);
+}
+
+</style>
+
+<div class='background'>
+</div>
+<div class='row'>
+<div class='col-sm-6'>
+  <center><h1 style='color: white; font-size: 150px'><%= @bar.name %></h1>
+    <%= image_tag @flag, {class: 'bar-flag'} %>
+  <h2 style='color: white;'>In questo bar si tifa Russia!</h2></center>
+  <p style='color: white'>
+  </p>
+  <div class='row' style='color: white'>
+    <div class='col-sm-4'>
+      <center><i class="fa fa-2x fa-building-o"></i>
+      <br>
+      <%= @bar.address %></center>
+    </div>
+    <div class='col-sm-4'>
+      <center>
+      <i class="fa fa-2x fa-phone"></i><br>
+      <%= @bar.phone %>
+    </center>
+    </div>
+    <div class='col-sm-4'>
+      <center>
+      <i class="fa fa-2x fa-envelope"></i><br>
+      <%= @bar.email %>
+    </center>
+    </div>
+  </div>
+  <div class='row more-events'>
+    Prossimi eventi
+  </div>
+  <br>
+</div>
+
+<div class='col-sm-6' style='padding-left: 0px; padding-right: 0px'>
+<table class="table-fill">
+  <thead>
+    <tr>
+      <th class="text-left">Nome</th>
+      <th class="text-left">Punteggio</th>
+    </tr>
+</thead>
+<tbody class="table-hover">
+  <% @leaderboard.each do |key, value| %>
+    <% user = User.find_by(name: key) %>
+
+    <tr>
+      <td class="text-left"><%= link_to key, user_path(user) %></td>
+      <td class="text-left"><%= value %></td>
+    </tr>
+  <% end %>
+</tbody>
+</table>
+</div>
+</div>
