--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -9,7 +9,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('http://www.thompsonhotels.com/content/uploads/2014/11/LP_Bar-1200x667.jpg');
+    background-image: url(<%= @bar.image_url %>);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
@@ -24,8 +24,8 @@ body {
 <div class='row'>
 <div class='col-sm-6'>
   <center><h1 style='color: white; font-size: 150px'><%= @bar.name %></h1>
-    <%= image_tag @flag, {class: 'bar-flag'} %>
-  <h2 style='color: white;'>In questo bar si tifa Russia!</h2></center>
+    <%= image_tag @nation.flag_url, {class: 'bar-flag'} %>
+  <h2 style='color: white;'>In questo bar si tifa <%= @nation.name %>!</h2></center>
   <p style='color: white'>
   </p>
   <div class='row' style='color: white'>
